// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidget06 matches custom props snapshot 1`] = `
<div
  class="card bg-info"
>
  <div
    class="card-body pb-0"
  >
     
    <h4
      class="mb-0"
    >
      header
    </h4>
     
    <p>
      text
    </p>
  </div>
   
</div>
`;

exports[`CWidget06 matches default props snapshot 1`] = `
<div
  class="card bg-primary"
>
  <div
    class="card-body pb-0"
  >
     
    <h4
      class="mb-0"
    >
      header:string
    </h4>
     
    <p>
      text:string
    </p>
  </div>
   
</div>
`;
